# MarkMind

./: .env.example  .gitignore  .npmrc  AGENTS.md  DESIGN.md  LICENSE  README.md  index.html  package-lock.json  package.json  sample-flowchart.md  sample-gantt.md  sample-kanban.md  vite.config.ts
.agent/workflows/: build.md  update_version.md
.github/workflows/: release.yml
mcpb/: manifest.json  package.json
mcpb/server/: index.js
scripts/: BASELINE.md  baseline_diarize_pyannote.py  baseline_diarize_pyannoteai.py  baseline_diarize_whisperx.py  baseline_identify_pyannoteai.py  diar_eval.py  sync-version.mjs
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: diarize_pyannote.py
src-tauri/scripts/: download-diarize-models.sh  download-ffmpeg.sh
src-tauri/src/: export_pptx.rs  fonts.rs  lan_server.rs  lib.rs  print_pdf.rs  secrets.rs  share.rs  subscription_auth.rs  user_memory.rs  vault.rs
src-tauri/src/converters/: audio_pipeline.rs  audio_splitter.rs  cancel.rs  commands.rs  diar.rs  diarize.rs  diarize_cloud.rs  diarize_local.rs  error.rs  keychain.rs  mod.rs  notes_pipeline.rs  ocr_pipeline.rs  pdf_extractor.rs  progress.rs  slide_assets.rs  speaker_dedup.rs  templates.rs  vad.rs
src-tauri/src/converters/llm/: anthropic.rs  gemini.rs  gemini_agy.rs  grok.rs  image_gen.rs  mod.rs  openai_api.rs  openai_codex.rs
src-tauri/src/gdrive/: api.rs  auth.rs  commands.rs  error.rs  mod.rs  storage.rs
src-tauri/src/mcp/: mod.rs
src/components/: AIPanel.css  AIPanel.tsx  AuthCallback.tsx  BackgroundPicker.tsx  BeforeAfterView.css  BeforeAfterView.tsx  DiffView.tsx  DriveBrowser.tsx  Editor.tsx  FloatingAIBar.css  FloatingAIBar.tsx  FlowchartPanel.css  FlowchartPanel.tsx  FlowchartRichBlock.css  FlowchartRichBlock.tsx  FlowchartView.css  FlowchartView.tsx  FrameworkPanel.css  FrameworkPanel.tsx  GanttPanel.tsx  GanttView.css  GanttView.tsx  InlineDiffView.css  InlineDiffView.tsx  KanbanPanel.tsx  KanbanView.css  KanbanView.tsx  LanFileBrowser.tsx  LoginButton.tsx  McpProposalView.tsx  MindmapCanvas.css  MindmapCanvas.tsx  MindmapView.css  MindmapView.tsx  OutlinePanel.tsx  Preview.tsx  RecentFilesPanel.tsx  SearchBar.tsx  SettingsModal.tsx  SlideshowView.css  (+7 more)
src/components/ai/: ConversationTimeline.css  ConversationTimeline.tsx  ImageGenPanel.css  ImageGenPanel.tsx  InlineModelDropdown.css  InlineModelDropdown.tsx  LlmSelector.tsx  ModeSelector.tsx  NotesOptions.tsx  NotesResultCard.tsx  SlideExportPanel.tsx
src/components/convert/: AIModelPicker.tsx  AudioTab.tsx  LanShareSection.tsx  NotesTab.tsx  OcrTab.tsx  ProgressPanel.tsx  ResultCard.tsx  SettingsView.tsx  SpeakerEditor.tsx  convert.css  pickFile.ts  types.ts
src/components/sidebar/: ConvertSidebar.tsx  sidebar.css
src/constants/: tutorial.ts
src/extensions/: FlowchartCodeBlock.ts  ImageInline.ts  InlineCheckbox.ts  MarkdownTable.ts
src/hooks/: useAI.ts  useAuth.ts  useConverter.ts  useFileSystem.ts  useNativeMenu.ts  useRecentFiles.ts  useScrollSync.ts  useTheme.ts
src/lib/: buildHtmlSlides.test.ts  buildHtmlSlides.ts  buildPptx.test.ts  buildPptx.ts  d3-layout.ts  dagre-layout.test.ts  dagre-layout.ts  flowchart-converter.ts  flowchart-shapes.test.ts  flowchart-shapes.ts  flowchartBlock.ts  frameworks.test.ts  frameworks.ts  gantt-parser.test.ts  gantt-parser.ts  ganttEdit.test.ts  ganttEdit.ts  ganttSerialize.test.ts  ganttSerialize.ts  htmlSlideTheme.ts  imageAttach.test.ts  imageAttach.ts  imageSrc.test.ts  imageSrc.ts  kanban-parser.test.ts  kanban-parser.ts  kanbanEdit.test.ts  kanbanEdit.ts  kanbanSerialize.test.ts  kanbanSerialize.ts  markdownCursor.test.ts  markdownCursor.ts  markdownDisplay.test.ts  markdownDisplay.ts  markdownSerialization.test.ts  markdownSerialization.ts  markdownToSlides.test.ts  markdownToSlides.ts  markdownTree.test.ts  markdownTree.ts  (+20 more)
src/lib/htmlSlides/: frontendSlidesDocs.test.ts  frontendSlidesDocs.ts  htmlUrlSafety.ts  nativeHtmlSlides.test.ts  nativeHtmlSlides.ts  sourceImageRebase.test.ts  sourceImageRebase.ts  templateProfiles.ts  templateRuntime.test.ts  templateRuntime.ts
src/lib/pdf/: exportVisualPdf.ts  flowchartSvgSnapshot.test.ts  flowchartSvgSnapshot.ts  richFlowchartPrint.ts
src/services/: aiModelConfig.ts  aiService.test.ts  aiService.ts  apiValidation.ts  dialogService.ts  expandPrompt.txt  flowchartPrompt.txt  frameworkGeneratePrompt.txt  ganttPrompt.txt  gdriveService.ts  imageGen.ts  kanbanPrompt.txt  knowaiAuth.ts  lanService.ts  platform.ts  secretsService.ts  secureStorage.ts  slideAssetBundle.test.ts  slideAssetBundle.ts  slideAssets.test.ts  slideAssets.ts  subscriptionService.ts  userMemory.ts  webFileSystem.ts
src/types/: ai.ts  auth.ts  converter.ts  d3-flextree.d.ts  flowchart.ts  gantt.ts  kanban.ts  mindmap.ts  tiptap-markdown.d.ts
