[package]
name = "markmind"
version = "0.1.0"
description = "Minimal Markdown Editor for macOS"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "md_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# devtools: release 빌드에서도 우클릭 → Inspect Element 활성화 (production 디버깅)
# 2.10 핀 — pyannote-rs 추가 시 cargo 가 tauri 2.3 으로 downgrade 해 wry 0.50 와 API mismatch.
tauri = { version = "~2.10", features = ["devtools"] }
tauri-plugin-opener = "~2.5"
tauri-plugin-dialog = "~2.6"
tauri-plugin-fs = "~2.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2"

# === doc-converter integration deps ===
# HTTP client for Gemini / Claude API calls (with retry + streaming)
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "multipart", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
async-trait = "0.1"

# Audio: ffmpeg sidecar (auto-downloads ffmpeg binary on first run)
ffmpeg-sidecar = "2"

# Audio: Silero VAD via onnxruntime. rc.10 핀 (rc.12 VitisAI 빌드 회귀 회피).
ort = { version = "=2.0.0-rc.10", features = ["ndarray"] }
ndarray = "0.16"

# Speaker diarization (pyannote ONNX). speakrs 대신 채택 — openblas/ndarray-linalg
# 의존 없이 ort + knf-rs (kaldi-native-fbank) 만으로 동작. macOS CoreML feature
# 로 가속. 1시간 음성 1분 이내 CPU 처리. MIT 라이선스.
pyannote-rs = { version = "0.3", features = ["coreml"] }

# Audio decoding (PCM extraction for VAD)
hound = "3"

# PDF rasterization fallback
pdfium-render = { version = "0.8", features = ["thread_safe"] }

# Image processing
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
base64 = "0.22"

# macOS Keychain for API key storage
keyring = { version = "3", features = ["apple-native"] }

# Utility
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
dirs = "5"
tempfile = "3"
walkdir = "2"
mime_guess = "2"
log = "0.4"
env_logger = "0.11"

# Google Drive 연동 (OAuth 2.0 PKCE + Drive v3 REST — reqwest 직접 사용)
url = "2"
tiny_http = "0.12"  # OAuth redirect callback loopback server
rand = "0.8"        # PKCE verifier / CSRF state 난수
sha2 = "0.10"       # PKCE S256 challenge

