[package]
name = "markmind"
version = "0.9.6"
description = "Minimal Markdown Editor for macOS"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "md_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# devtools: release 빌드에서도 우클릭 → Inspect Element 활성화 (production 디버깅)
# 2.10 핀 — pyannote-rs 추가 시 cargo 가 tauri 2.3 으로 downgrade 해 wry 0.50 와 API mismatch.
# protocol-asset: asset:// 프로토콜(convertFileSrc) 활성화 — 로컬 이미지 인라인 표시(#55)
tauri = { version = "~2.10", features = ["devtools", "protocol-asset"] }
tauri-plugin-opener = "~2.5"
tauri-plugin-dialog = "~2.6"
tauri-plugin-fs = "~2.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2"

# === doc-converter integration deps ===
# HTTP client for Gemini / Claude API calls (with retry + streaming)
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "multipart", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
async-trait = "0.1"

# Audio: ffmpeg sidecar (auto-downloads ffmpeg binary on first run)
ffmpeg-sidecar = "2"

# Audio: Silero VAD via onnxruntime. rc.10 핀 (rc.12 VitisAI 빌드 회귀 회피).
ort = { version = "=2.0.0-rc.10", features = ["ndarray"] }
ndarray = "0.16"

# 화자분리(diarization)는 검증된 pyannote 로 위임 — 로컬(Python 사이드카 diarize_pyannote.py)
# 또는 클라우드(pyannote.ai). 자작 pyannote-rs(+knf-rs/cmake) 의존은 제거됨.

# Audio decoding (PCM extraction for VAD)
hound = "3"

# PDF rasterization fallback
pdfium-render = { version = "0.8", features = ["thread_safe"] }

# Image processing
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
base64 = "0.22"

# macOS Keychain for API key storage
keyring = { version = "3", features = ["apple-native"] }

# Utility
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
dirs = "5"
tempfile = "3"
walkdir = "2"
mime_guess = "2"
log = "0.4"
env_logger = "0.11"

# Google Drive 연동 (OAuth 2.0 PKCE + Drive v3 REST — reqwest 직접 사용)
url = "2"
tiny_http = "0.12"  # OAuth redirect callback loopback server
rand = "0.8"        # PKCE verifier / CSRF state 난수
sha2 = "0.10"       # PKCE S256 challenge

# === MCP 서버 (읽기 전용) — Claude Code/Desktop 이 열린 문서를 읽도록 노출 ===
# 공식 Rust SDK. transport-streamable-http-server 는 tower Service 만 노출(axum 미포함)
# 이라 serve 용 axum 을 별도 추가. http 1.x 기반이라 rmcp 와 호환.
rmcp = { version = "1.7", features = ["server", "macros", "transport-streamable-http-server"] }
axum = "0.8"

# === LAN 파일 공유 서버 — 같은 Wi-Fi 의 기기(아이폰 등)가 문서를 읽고 편집 ===
# 빌드된 프론트(dist)를 바이너리에 임베드해 정적 서빙 + 파일 API.
# MCP(127.0.0.1 고정)와 달리 설정창에서 Connect 할 때만 0.0.0.0 에 bind(토글).
# debug 빌드는 런타임에 dist 를 파일시스템에서 읽음(debug-embed 미사용) → dev 중
# `npm run build` 후 최신 UI 반영. release 는 컴파일 타임 임베드.
rust-embed = "8"
local-ip-address = "0.6"
portable-pty = "0.9.0"


# macOS native print API — NSPrintInfo 명시 설정 + WKWebView.printOperationWithPrintInfo
# 호출. window.print() 가 wry 의 default 사용 (paperSize/centered 미명시 → 좌측
# 여백 비대칭) 회피용. PR #26 의 PDF export 정밀 제어.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = [
    "NSResponder",
    "NSView",
    "NSWindow",
    "NSPrintInfo",
    "NSPrintOperation",
    "NSSharingService",
] }
objc2-web-kit = { version = "0.3", features = [
    "WKWebView",
] }
objc2-foundation = { version = "0.3", features = ["NSURL", "NSString", "NSError", "NSDictionary", "NSArray"] }
